--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 /* GENERAL */
 *{
+    /* margin: 0;
+    padding: 0; */
+    box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .grid{
     display: grid;
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: repeat(auto-fill, calc(100%/3 - 20px));
     column-gap: 20px;
 }
 
@@ -21,7 +24,7 @@
 .encuesta-container{
     border: 1px solid black;
     padding: 20px;
-    align-self: self-start;
+    /* align-self: self-start; */
 }
 
 /* CREAR PREGUNTA */
@@ -49,7 +52,7 @@
 .encuesta-input{
     width: 100%;
     margin-bottom: 15px;
-    padding: 15px 0;
+    padding: 15px;
     border-radius: 5px;
     border: 1px solid black;
 }
@@ -71,7 +74,7 @@
 /* VOTAR PREGUNTA */
 #votar-pregunta{
     text-align: center;
-    padding: 10px;
+    padding: 15px;
     border: 2px solid dodgerblue;
     border-radius: 50px;
 }
@@ -88,12 +91,9 @@
     margin: 0;
 }
 
-.votar-opcion:hover{
-    background-color: aliceblue;
-}
-
 .votada{
-    background-color: lightcyan;
+    background-color: dodgerblue;
+    color: white;
 }
 
 /* OTROS */
